  - SoftHyphen enum value has been added to specify a line break opportunity
    at a soft hyphen (SHY) character.
  - MandatoryBreak enum value has been added to specify a mandatory (aka "hard") line breaks.
  - StartWord/EndWord enum values has been logically replaced with StartOfItem/EndOfItem ones
    to mention they are not about the word boundaries only.

QtGui
-----
* Accessibility has been refactored. The hierachy of accessible objects is implemented via
  proper parent/child functions instead of using navigate which has been deprecated for this purpose.
  Table and cell interfaces have been added to qaccessible2.h

* Touch events and points have been extended to hold additional
  information like capability flags, point-specific flags, velocity,
  and raw positions.

* A new set of enabler classes have been added, most importantly QWindow, QScreen,
  QSurfaceFormat, and QOpenGLContext.

* Most of the useful QtOpenGL classes have been polished and moved into
  QtGui. See QOpenGLFramebufferObject, QOpenGLShaderProgram,
  QOpenGLFunctions, etc.

* QOpenGLPaintDevice has been added to be able to use QPainter to render into
  the currently bound context.

* Behavioral change in QImage::fill() on an image with format Format_RGB888:
  For consistency with RGB32 and other 32-bit formats, function now expects
  image data in RGB layout as opposed to BGR layout.

* Behavioral change in QImage and QPixmap load()/loadFromData() on a non-null image:
  If load() or loadFromData() fails to load the image (returns false) then
  the existent image data will be invalidated, so that isNull() is guaranteed
  to return true in this case.

* Behavioral change regarding QPainter fill rules when not using antialiased
  painting: The fill rules have changed so that the aliased and antialiased
  coordinate systems match. Earlier there used to be an offset of slightly less
  than half a pixel when doing sub-pixel rendering, in order to be consistent