@@ -51,7 +51,6 @@ DECL|macro|QT_NO_PROXYMODEL
 DECL|macro|QT_NO_SCROLLAREA
 DECL|macro|QT_NO_SCROLLBAR
 DECL|macro|QT_NO_SOCKS5
-DECL|macro|QT_NO_SOFTKEYMANAGER
 DECL|macro|QT_NO_SORTFILTERPROXYMODEL
 DECL|macro|QT_NO_SPINBOX
 DECL|macro|QT_NO_SPLITTER
