@@ -1,1 +1,0 @@
-DECL|macro|QSOFTKEYMANAGER_COMMON_P_H
