@@ -1,2 +1,0 @@
-DECL|macro|QSOFTKEYMANAGER_P_H
-DECL|variable|QSoftKeyManagerPrivate
