@@ -1,5 +1,4 @@
 DECL|class|QDialogButtonBoxPrivate
-DECL|class|QDialogButtonEnabledProxy
 DECL|enumerator|AcceptRole
 DECL|enumerator|ActionRole
 DECL|enumerator|AlternateRole
@@ -17,7 +16,6 @@ DECL|function|QDialogButtonBox
 DECL|function|QDialogButtonBox
 DECL|function|QDialogButtonBox
 DECL|function|QDialogButtonBoxPrivate
-DECL|function|QDialogButtonEnabledProxy
 DECL|function|_q_handleButtonClicked
 DECL|function|_q_handleButtonDestroyed
 DECL|function|addButton
@@ -32,10 +30,8 @@ DECL|function|centerButtons
 DECL|function|changeEvent
 DECL|function|clear
 DECL|function|createButton
-DECL|function|createSoftKey
 DECL|function|createStandardButtons
 DECL|function|event
-DECL|function|eventFilter
 DECL|function|initLayout
 DECL|function|layoutButtons
 DECL|function|orientation
@@ -50,15 +46,11 @@ DECL|function|standardButton
 DECL|function|standardButtonText
 DECL|function|standardButtons
 DECL|function|~QDialogButtonBox
-DECL|function|~QDialogButtonEnabledProxy
 DECL|member|buttonLayout
 DECL|member|buttonLists
 DECL|member|center
 DECL|member|internalRemove
 DECL|member|layoutPolicy
 DECL|member|orientation
-DECL|member|softKeyActions
-DECL|member|source
 DECL|member|standardButtonHash
-DECL|member|target
 DECL|variable|layouts
